[package]
name = "pkt-cert"
version = "0.1.0"
edition = "2021"

[dependencies]
acme2 = "0.5.1"
clap = { version = "4.5.48", features = ["derive"] }
eyre = "0.6.12"
hickory-resolver = "0.25.2"
md5 = "0.8.0"
rand = "0.9.2"
rcgen = "0.14.5"
reqwest = { version = "0.11.27", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
tokio = { version = "1.47.1", features = ["io-std","fs","process"] }
warp = { version = "0.4.2", features = ["server"] }
